span by spots